# butteraugli

./: .gitignore  .workongoing  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIFFERENCES.md  FEEDBACK.md  PARITY_PLAN.md  README.crates.md  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apidoc/: Cargo.toml
benchmarks/: README.md  cpp_libjxl_final_iter3_2026-04-27.txt  cpp_libjxl_h_v_blur_2026-04-27.txt  cpp_libjxl_iter3_malta_pad_2026-04-27.txt  cpp_libjxl_uhf_hf_fusion_2026-04-27.txt  cpp_vs_rust_baseline_2026-04-27.txt  libjxl_combined_iter1_2_3.patch  libjxl_h_v_blur.patch  libjxl_iter2_uhf_hf_fusion.patch  strip_vs_full_mem_2026-06-23.tsv
butteraugli/: Cargo.toml
butteraugli-bench/: Cargo.toml  build.rs
butteraugli-bench/benches/: bench_compare.rs
butteraugli-bench/examples/: score_parity.rs  strip_vs_full_mem.rs
butteraugli-bench/ffi/: butteraugli_ffi.h
butteraugli-cli/: Cargo.toml  README.md
butteraugli-cli/src/: main.rs
butteraugli-cli/tests/: cli.rs
butteraugli/benchmarks/: w44_phase3_b7d_day6_2026-05-24.tsv  w44_phase3_b7d_day6_stage_attribution_1024_2026-05-24.tsv  w44_phase3_b7d_day6_stage_attribution_summary_2026-05-24.tsv
butteraugli/examples/: aligned_bench.rs  bench.rs  callgrind_single.rs  compare.rs  conv_simd_bench.rs  malta_bench.rs  precompute_bench.rs  strip_memory.rs  w44_phase3_b7d_day5_sanity_bench.rs  w44_phase3_b7d_day6_ab.rs  w44_phase3_b7d_day6_stage_probe.rs
butteraugli/src/: blur.rs  blur_iir.rs  blur_strip.rs  consts.rs  diff.rs  image.rs  image_aligned.rs  lib.rs  malta.rs  malta_strip.rs  mask.rs  opsin.rs  precompute.rs  psycho.rs  psycho_strip.rs  reference_data.rs  strip.rs  xyb.rs
butteraugli/tests/: cancellation.rs  capture_cpp_scores.rs  conformance.rs  cpp_fuzz.rs  cpp_parity.rs  cross_arch_parity.rs  intermediate_values.rs  public_api_doc.rs  reference_parity.rs  step_by_step_comparison.rs  strip_parity.rs  strip_parity_50_images.rs
butteraugli/tests/common/: generators.rs  mod.rs  reference_data.rs
docs/public-api/: ABLATION-butteraugli.md  butteraugli.features.txt  butteraugli.internal.txt  butteraugli.txt
examples/: README.md  analyze_score.rs  bench_test.rs  butteraugli_debug.rs  capture_cpp_reference.rs  debug_values.rs  test_uniform.rs  trace_ac.rs  trace_detailed.rs  trace_full_diff.rs  trace_no_multires.rs  trace_opsin.rs  trace_uniform.rs  trace_values.rs
experiments/xyb-comparison/: Cargo.toml
experiments/xyb-comparison/src/: main.rs
src/: blur.rs  consts.rs  diff.rs  lib.rs  malta.rs  mask.rs  opsin.rs  psycho.rs  xyb.rs
tests/: conformance.rs  cpp_fuzz.rs  cpp_parity.rs  intermediate_values.rs  reference_parity.rs  step_by_step_comparison.rs
tests/common/: mod.rs
