[workspace]
resolver = "2"
members = ["butteraugli", "butteraugli-cli"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/imazen/butteraugli"
homepage = "https://github.com/imazen/butteraugli"
authors = ["Lilith River <lilith@imazen.io>"]
rust-version = "1.85"

[workspace.dependencies]
butteraugli = { path = "butteraugli", version = "0.4.0" }
wide = "0.7"
multiversion = "0.8"
multiversed = "0.2"
archmage = { version = "0.4", features = ["avx512"] }
magetypes = { version = "0.4", features = ["avx512"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
imgref = "1.10"
rgb = "0.8"
