[workspace]
resolver = "2"
members = ["butteraugli", "butteraugli-cli"]
exclude = ["experiments"]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/imazen/butteraugli"
homepage = "https://github.com/imazen/butteraugli"
authors = ["Lilith River <lilith@imazen.io>"]
rust-version = "1.89"

[workspace.dependencies]
butteraugli = { path = "butteraugli", version = "0.9.0" }
archmage = { version = "0.9.7", features = ["avx512"] }
magetypes = { version = "0.9.7", features = ["avx512"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
imgref = "1.10"
rgb = "0.8"
rayon = "1.10"
