[package]
name = "butteraugli-bench"
version = "0.0.0"
edition = "2024"
publish = false

[features]
default = []

[build-dependencies]
cc = "1"

[dependencies]
butteraugli = { workspace = true }
rayon = { workspace = true }
linear-srgb = "0.6.12"
imgref = { workspace = true }
rgb = { workspace = true }
bytemuck = "1.18"
zenbench = "0.1.7"

[[bench]]
name = "bench_compare"
harness = false

[[example]]
name = "score_parity"

[[example]]
name = "strip_vs_full_mem"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(has_cpp_butteraugli)']
